--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -15,7 +15,9 @@
   "author": "sitnikov",
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "cors": "^2.8.5",
+    "electron-squirrel-startup": "^1.0.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
