--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "electron-log": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2"
   },
