--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "electron-log": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "txt-reader": "^1.4.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
