--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -19,7 +19,8 @@
     "electron-log": "^5.1.1",
     "electron-squirrel-startup": "^1.0.0",
     "express": "^4.18.2",
-    "txt-reader": "^1.4.5"
+    "txt-reader": "^1.4.5",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
